...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <EditText
                            android:id="@+id/editGuarantee"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:textColor="#000000" />

                        <Button
                            android:id="@+id/btnGuarantee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:visibility="invisible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <EditText
                            android:id="@+id/editTuev"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:textColor="#000000" />

                        <Button
                            android:id="@+id/btnTuev"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:visibility="invisible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <EditText
                            android:id="@+id/editUvv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:textColor="#000000" />

                        <Button
                            android:id="@+id/btnUvv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:visibility="invisible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <EditText
                            android:id="@+id/editRepair"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:textColor="#000000" />

                        <Button
                            android:id="@+id/btnRepair"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:visibility="invisible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
...
