<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        app:srcCompat="@drawable/dallmann" />

    <EditText
        android:id="@+id/editEmailLogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/editPasswordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/textEmail"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editPasswordLogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editEmailLogin"
        android:layout_alignLeft="@+id/editEmailLogin"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginBottom="-70dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/editPasswordLogin"
        android:layout_alignTop="@+id/editPasswordLogin"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:background="#B8A3A3"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:text="Einloggen"
        android:textAlignment="center"
        android:textColor="#372F2F"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editPasswordLogin"
        android:layout_alignTop="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="200dp"
        android:text="@string/needHelpText"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-4dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

    </LinearLayout>
</RelativeLayout>
