<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.asset_management.deviceCard.DeviceCardActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Bearbeiten"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="Löschen"
        app:showAsAction="never" />
</menu>
