...
    <string name="textFilterByStatus">Filtern nach Status</string>
    <string name="textFilterByTuevPeriod">TÜV Zeitraum auswählen</string>
    <string name="textStart">start</string>
    <string name="textConstruction">Baustelle</string>
    <string name="textReserve">reservieren</string>
    <string name="textEnd">Ende</string>
    <string name="textFilter">Filtern</string>
    <string name="textManufacturer">Hersteller</string>
    <string name="textManufacturerAdd">Hersteller*</string>
    <string name="textModel">Modell</string>
    <string name="textModelAdd">Modell*</string>
    <string name="textName">Name</string>
    <string name="textStreet">Straße</string>
...
